--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
     font-family: 'Rubik', sans-serif;
     color:#2F323B;
 }
+body p {
+    line-height: 2rem;
+}
 
 .navbar {
    text-transform: uppercase; 
@@ -58,6 +61,8 @@ body {
     font-weight: 700;
     font-size: 1.1rem; 
 }
+
+/*--- About ---*/
 .about h1 {
     margin-top: 400px;
 }
