--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body p {
    font-weight: 700;
    font-size: 0.8rem;
    letter-spacing: 0.1rem;
-   background: rgba(213,98,86,1)!important
+   background: rgba(125, 32, 63, 1)!important
 }
 .navbar-brand img {
     height: 2.4rem;
@@ -26,7 +26,7 @@ body p {
 /*--- Landing Page ---*/
 
 .home-inner {
-    background-image: url(img/classroom.jpg);
+    background-image: url(img/bannerphoto.png);
 }
 
 .caption {
@@ -36,39 +36,48 @@ body p {
     top: 25%;
     z-index: 1;
     color: black;
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Rubik', sans-serif;
 }
 
 .caption h1 {
     font-size: 4.8rem;
-    color: #C35354;
-    font-family: 'Roboto Mono', monospace; 
-    text-shadow: 0.05rem 0.0rem 0.1rem black;
+    color: #FFE3ED;
+    text-shadow: 0.1rem 0.1rem 0.8rem black;
     font-weight: 700;
     padding-bottom: 1rem;
 }
 
 .caption h3 {
-    font-size: 2rem;
-    font-family: 'Roboto Mono', monospace;   
-    text-shadow: 0.01rem 0.01rem 0.01rem black;
+    font-size: 2.5rem;
+    color: #FFE3ED;
+    text-shadow: 0.1rem 0.1rem 0.5rem black;
     padding-bottom: 1.5rem;
 }
 
 .btn-lg {
-    color:rgba(195,83,84,1);
-    background-color: #FFC0BB;
-    border-color: rgba(213,98,86,1);
-    padding: .6rem 1/3rem;
+    color:white;
+    background-color: #00C9A3;
+    border-color: rgba(0, 201, 163, 1);
+    border-radius: 0;
+    text-transform: uppercase;
+    padding: .6rem 1.2rem;
     border-width: medium;
     font-weight: 700;
-    font-size: 1.1rem; 
+}
+.btn-lg:hover {
+    border-color:#2e8c7b;
+    background-color:#2e8c7b;
 }
 
 /*--- About ---*/
-.about h1 {
-    margin-top: 400px;
+.narrow {
+    width: 75%;
+    margin: 1.5rem auto;
 }
 
 /*--- Partners Section ---*/
+.jumbotron {
+   margin-bottom: 0;
+   padding: 2rem 0 3.5rem; 
+}
 
