--- a/style.css
+++ b/style.css
@@ -96,6 +96,14 @@ body p {
     margin: 1.5rem auto;
 }
 
+.Coming {
+    margin-top: 2rem;
+}
+
+.Coming H3 {
+    color: red;
+}
+
 /*--- Topics Section ---*/
 .jumbotron {
    margin-bottom: 0;
@@ -121,3 +129,12 @@ h3.heading {
     height: 200px;
     padding-bottom: 1rem;
 }
+
+/*-- Partners --*/
+
+.Companies { 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
