--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body p {
    font-weight: 700;
    font-size: 0.8rem;
    letter-spacing: 0.1rem;
-   background: rgba(125, 32, 63, 0.9)!important
+   background: rgba(51, 51, 51, 0.5)!important
 }
 .navbar-brand img {
     height: 2.4rem;
@@ -50,7 +50,7 @@ body p {
 
 .caption h1 {
     font-size: 4.8rem;
-    color: #FFE3ED;
+    color: white;
     text-shadow: 0.1rem 0.1rem 0.8rem black;
     font-weight: 700;
     padding-bottom: 1rem;
@@ -58,15 +58,15 @@ body p {
 
 .caption h3 {
     font-size: 2.5rem;
-    color: #FFE3ED;
+    color: white;
     text-shadow: 0.1rem 0.1rem 0.5rem black;
     padding-bottom: 1.5rem;
 }
 
 .btn-lg {
     color:white;
-    background-color: #00C9A3;
-    border-color: rgba(0, 201, 163, 1);
+    background-color: #B5546E;
+    border-color: transparent;
     border-radius: 0;
     text-transform: uppercase;
     padding: .6rem 1.2rem;
@@ -78,8 +78,8 @@ body p {
     color:white;
     font-family: 'Rubik', sans-serif;
     font-size: 1.1rem;
-    background-color: #00C9A3;
-    border-color: rgba(0, 201, 163, 1);
+    background-color: #B5546E;
+    border-color: transparent;
     padding: .4rem 0.7rem;
     border-width: medium;
     border-radius: 5px;
@@ -100,16 +100,12 @@ body p {
     margin-top: 2rem;
 }
 
-.Coming H3 {
-    color: red;
-}
-
 /*--- Topics Section ---*/
 .jumbotron {
    margin-bottom: 0;
    padding: 2rem 0 3.5rem; 
    border-radius:0;
-   background-color: #FFE3ED;
+   background-color: rgba(51, 51, 51, 0.2)!important
 }
 h3.heading {
     font-size: 1.9rem;
